scss structure is done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <link rel="stylesheet" href="/css/application.css" />
   </head>
 
   <body>
+    <div class="alert alert-success" role="alert">
+      <strong>Well done!</strong> You successfully read this important alert message.
+    </div>
+
     <h1>This is our content!</h1>
-
-
+    <button class="btn btn-primary">Our Button</button>
   </body>
 </html>
