js basic structure

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 
     <h1>This is our content!</h1>
     <button class="btn btn-primary">Our Button</button>
+
+    <script src="/js/application.js"></script>
   </body>
 </html>
